# Jeogi-at

./: README.md
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md  🚀-feature-request.md
client/: .gitignore  README.md
client/jeogi/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
client/src/: Main.qml  Style.qml  main.cpp  metro_smart_subway.pro  qml.qrc
client/src/backend/: networkclient.cpp  networkclient.h  recordingmanager.cpp  recordingmanager.h
client/src/backend/util/micstreamer/: micstreamer.cpp  (+1 more)
client/src/components/: Footer.qml  Header.qml  Sidebar.qml  SystemStatItem.qml
client/src/pages/: CameraManagement.qml  CongestionStatus.qml  Dashboard.qml  Dashboard.qml.backup  DeviceControl.qml  RecordingPage.qml  RoiEditorDialog.qml  Statistics.qml
drivers/: .gitignore  Makefile  README.md  build.sh  drivers  set.sh  setup_drivers.sh
drivers/audio/: uart_audio.cpp
drivers/config/: config.json
drivers/display/: Makefile  cmd_set_led.cpp  config.json  display_pi_sub  test_display  test_display.cpp
drivers/includes/: audio.hpp  communication.hpp  config_loader.h  display.hpp  motor.hpp  sensor.hpp  sht20.hpp  system_monitor.hpp
drivers/mic/: broadcast_qt_to_mcu.cpp  part_mcu_spi_send_stream.cpp  part_qt_mic_receive.cpp
drivers/motor/: Makefile  config_loader.h  jeogi_full.sql  jeogi_schema.sql  main.cpp  motor.cpp  motor.h  motor_app  motor_app.cpp  motor_driver.c  sensor.cpp  sensor.h  set.sh  sht20.cpp  sht20.h  sht20_driver.c  system_monitor.cpp  system_monitor.hpp
drivers/src/: .communication.cpp.swp  Kbuild  audio.cpp  communication.cpp  display.cpp  main.cpp  motor.cpp  sensor.cpp  sht20.cpp  sht20_driver.c  system_monitor.cpp
drivers/subway_api/: subway_api_parse.c  subway_api_test.c
embedded-linux/: .gitignore  CMakeLists.txt  README.md  build.sh  setup_camera.sh
embedded-linux/src/: main.cpp
firmware/: .gitignore  README.md
firmware/STM32F401_EdgeDevice/: CMakeLists.txt  README.md  STM32F401RETX_FLASH.ld  STM32F401RETX_RAM.ld  STM32F401_EdgeDevice Debug.launch  STM32F401_EdgeDevice.ioc
firmware/STM32F401_EdgeDevice/Core/Inc/: Communication.h  Display_Screens.h  Environmental_system.h  MQ135.h  MQ7.h  Matrixrun.h  Motor.h  RGBMatrix_device.h  app_task.h  dev_ctrl.h  fonts.h  i2s_audio.h  main.h  sensor_app.h  spi_sdcard.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  uart_cmd.h  uart_handler.h  uart_protocol.h
firmware/STM32F401_EdgeDevice/Core/Inc/app/: app_task.h
firmware/STM32F401_EdgeDevice/Core/Inc/common/: data_manager.h
firmware/STM32F401_EdgeDevice/Core/Inc/drivers/audio/: audio_out.h
firmware/STM32F401_EdgeDevice/Core/Inc/drivers/display/: fonts.h  gui_paint.h  rgb_matrix_device.h
firmware/STM32F401_EdgeDevice/Core/Inc/drivers/storage/: sd_spi.h
firmware/STM32F401_EdgeDevice/Core/Inc/features/display/: display_screens.h  matrix_run.h
firmware/STM32F401_EdgeDevice/Core/Inc/features/protocol/: uart_handler.h  uart_protocol.h
firmware/STM32F401_EdgeDevice/Core/Inc/features/sensors/: mq135.h  mq7.h  sensor_app.h
firmware/STM32F401_EdgeDevice/Core/Inc/services/: audio_player.h  audio_stream_rx.h  audio_streaming.h  sd_storage.h
firmware/STM32F401_EdgeDevice/Core/Inc/services/audio/: audio_player.h  audio_stream_rx.h
firmware/STM32F401_EdgeDevice/Core/Inc/services/storage/: sd_storage.h
firmware/STM32F401_EdgeDevice/Core/Src/: Communication.c  Data_Manager.c  Display_Screens.c  Environmental_system.c  MQ135.c  MQ7.c  Matrixrun.c  Motor.c  RGBMatrix_device.c  adc.c  app_task.c  dev_ctrl.c  dma.c  gpio.c  i2s.c  i2s_audio.c  main.c  spi.c  spi_sdcard.c  stm32f4xx_it.c  tim.c  uart_cmd.c  uart_handler.c  uart_protocol.c  usart.c
firmware/STM32F401_EdgeDevice/Core/Src/app/: app_task.c
firmware/STM32F401_EdgeDevice/Core/Src/common/: data_manager.c
firmware/STM32F401_EdgeDevice/Core/Src/drivers/display/: font12.c  font8.c  gui_paint.c  rgb_matrix_device.c
firmware/STM32F401_EdgeDevice/Core/Src/drivers/storage/: sd_spi.c
firmware/STM32F401_EdgeDevice/Core/Src/features/display/: display_screens.c  matrix_run.c
firmware/STM32F401_EdgeDevice/Core/Src/features/protocol/: uart_handler.c  uart_protocol.c
firmware/STM32F401_EdgeDevice/Core/Src/features/sensors/: mq135.c  mq7.c
firmware/STM32F401_EdgeDevice/Core/Src/services/: audio_player.c  audio_stream_rx.c  audio_streaming.c  sd_storage.c
firmware/STM32F401_EdgeDevice/Core/Src/services/audio/: audio_player.c  audio_stream_rx.c
firmware/STM32F401_EdgeDevice/Core/Src/services/storage/: sd_storage.c
firmware/STM32F401_EdgeDevice/Core/Startup/: startup_stm32f401retx.s
firmware/STM32F401_EdgeDevice/User/Fonts/: font12.c  font12CN.c  font16.c  font24.c  font24CN.c  fonts.h
firmware/STM32F401_EdgeDevice/User/GUI/: Data_Manager.c  Data_Manager.h  Display_Screens.c  Display_Screens.h  GUI_Paint.c  GUI_Paint.h
firmware/STM32F401_EdgeDevice/User/RGBMatrix/: RGBMatrix_device.c  RGBMatrix_device.h
firmware/STM32F401_EdgeDevice/build_cmake/: CMakeCache.txt  Makefile  STM32F401_EdgeDevice  STM32F401_EdgeDevice.hex  cmake_install.cmake
firmware/STM32F401_EdgeDevice/docs/: core-structure-migration.md
protocol/: camera_packet.hpp  message_types.hpp  sensor_thresholds.hpp
server/: .gitignore  CMakeLists.txt  PRESENTATION.md  README.md  build.sh  get_cert.sh  setup_server.sh
server/includes/: audio.hpp  client_handler.hpp  command_handler.hpp  config_manager.hpp  congestion_analyzer.hpp  congestion_publisher.hpp  database.h  database.hpp  display.hpp  hanwha_node.hpp  motor.h  motor.hpp  parser.hpp  pi_node.hpp  qt.h  qt.hpp  sensor.h  sensor.hpp  shared_data.hpp  speaker.hpp  system_monitor.h  system_monitor.hpp  tls_server.hpp
server/src/: Database.cpp  Main_server.cpp  Qt.cpp  Sensor.cpp  audio.cpp  client_handler.cpp  command_handler.cpp  congestion_analyzer.cpp  congestion_publisher.cpp  database.cpp  display.cpp  hanwha_node.cpp  main.cpp  motor.cpp  parser.cpp  pi_node.cpp  qt.cpp  qt_test.cpp  sensor.cpp  setup.cpp  shared_data.cpp  speaker.cpp  system_monitor.cpp  tls_server.cpp
server/test_sql/: .detection.swp  Makefile  main_server  qt_test
